added a paragraph to the body on the html file.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>BAMM</title>
 </head>
 <body>
     <header>
         <head>Welcome to our little music site.</head>
     </header>
+<h1>Check out the site we created</h1>
+<p>We wanted to create a interactive way for people to view artist's and album's. This site allows for people to read reviews, as well as create reviews for the current artist's. The site also allows for people to add artist's to the data base themselves. Obviously the review's and artist's that are added will take some time to post due to our admin's having to review the content before being published.</p>
+
 </body>
 </html>
