--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
     <title>BAMM</title>
     
 </head>
+<header><nav>
+    <ul>
+        <li id = 'nav_home' class = 'button'>Home</li>
+        <li id = 'nav_Artists' class = 'button'>All Artists</li>
+        <li id = 'nav_Albums' class = 'button'>All Albums</li>
+        <li id = 'nav_Songs' class = 'button'>All Songs</li>
+    </ul>   
+
+</nav>
+</header>
+
 <body>
-    <div id="head">
 <h2>Check out the site we created</h2>
 <p>We wanted to create a interactive way for people to view artist's and album's. This site allows for people to read reviews, as well as create reviews for the current artist's. The site also allows for people to add artist's to the data base themselves. Obviously the review's and artist's that are added will take some time to post due to our admin's having to review the content before being published.</p>
 
 <img src="images/princeMusician.jpg">
-</div>
-<nav>
 
-     
 
-</nav>
 
 <footer>
     &copy; 2019 BAMM                
