working home click method- We think, if git will cooperate

--- a/parcel-frontend/index.html
+++ b/parcel-frontend/index.html
@@ -20,14 +20,18 @@
 </header>
 
 <body>
-<h2>Check out the site we created</h2>
-<p>We wanted to create a interactive way for people to view artist's and album's. This site allows for people to read reviews, as well as create reviews for the current artist's. The site also allows for people to add artist's to the data base themselves. Obviously the review's and artist's that are added will take some time to post due to our admin's having to review the content before being published.</p>
+    <div id="body">
+        <h2>Check out the site we created</h2>
+        <p>We wanted to create a interactive way for people to view artist's and album's. This site allows for people to read reviews, as well as create reviews for the current artist's. The site also allows for people to add artist's to the data base themselves. Obviously the review's and artist's that are added will take some time to post due to our admin's having to review the content before being published.</p>
+        
+        <img src="images/princeMusician.jpg">
 
-<img src="images/princeMusician.jpg">
+    </div>
 
 
 <footer>
     &copy; 2019 BAMM                
     </footer>
+    <script src="./js/components/app.js"></script>
 </body>
 </html>
