--- a/parcel-frontend/index.html
+++ b/parcel-frontend/index.html
@@ -21,14 +21,16 @@
     </header>
 
     <div id="root">
-        <h2>Check out the site we created</h2>
-        <p>We wanted to create a interactive way for people to view artist's and album's. This site allows for people to read reviews, as well as create reviews for the current artist's. The site also allows for people to add artist's to the data base themselves. Obviously the review's and artist's that are added will take some time to post due to our admin's having to review the content before being published.</p>
+        <div id="home">
+        <h2>BAMM Music Site</h2>
+        </div>
+        <p>We created a interactive way for people to view artist's and album's. This site allows for people to read reviews, as well as create reviews for the current artist's. The site also allows for people to add artist's to the data base themselves. Obviously the review's and artist's that are added will take some time to post due to our admin's having to review the content before being published. We hope that you enjoy the site and will add to it whenever you feel the need. </p>   
         
-        <img src="images/princeMusician.jpg">
-
-    </div>
-
+        <img src="images/princeMusician.jpg"> 
+    </div>         
 </body>
+
+
 <footer>
     &copy; 2019 BAMM                
     </footer>
